fixed arrow spacing

--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@ p {
   .nav .nav-text {
     font-size: 2.4rem;
     margin-top: 15%;
-    margin-bottom: 17%;
+    margin-bottom: 10%;
     max-width: 90%;
   }
 }
