--- a/less/navigation.less
+++ b/less/navigation.less
@@ -39,7 +39,7 @@
     @media @phone {
       font-size: 2.4rem;
       margin-top: 15%;
-      margin-bottom: 17%;
+      margin-bottom: 10%;
       max-width: 90%;
     }
   }
